Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -58,21 +58,21 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sqlite3\n",
+    "connection = sqlite3.connect('planetss.db')\n",
+    "c = connection.cursor()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "Now create a cursor object so that you can execute statements through your connection."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "#Your code here; create a cursor object so you can execute statement against the database."
    ]
   },
   {
@@ -118,13 +118,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x7fb6f3ffe730>"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Your code here; create the table as described above."
+    "c.execute('''CREATE TABLE planetss (id INTEGER PRIMARY KEY, name TEXT,\n",
+    "                                    color TEXT, num_of_moons INTEGER, mass REAL)''')"
    ]
   },
   {
@@ -143,13 +153,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 23,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Your code for reading and executing alter.sql"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x7fb6f3ffe730>"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c.execute('''ALTER TABLE planetss ADD COLUMN rings BOOLEAN;''')"
    ]
   },
   {
@@ -191,13 +219,73 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x7fb6f3ffe730>"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c.execute('''INSERT INTO planetss (name,color,num_of_moons,mass,rings) VALUES \n",
+    "(\"Mercury\", \"gray\", 0, 0.55, 0),\n",
+    "(\"Venus\", \"yellow\", 0, 0.82, 0),\n",
+    "(\"Earth\", \"blue\", 1, 1.00, 0),\n",
+    "(\"Mars\", \"red\", 2, 0.11, 0),\n",
+    "(\"Jupiter\", \"orange\", 53, 317.90, 0),\n",
+    "(\"Saturn\", \"hazel\", 62, 95.19, 1),\n",
+    "(\"Uranus\", \"light blue\", 27, 14.54, 1),\n",
+    "(\"Neptune\",\"dark blue\", 14, 17.15, 1),\n",
+    "(\"Pluto\", \"brown\", 5, 0.003, 0);\n",
+    "''')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(1, 'Mercury', 'gray', 0, 0.55, 0),\n",
+       " (2, 'Venus', 'yellow', 0, 0.82, 0),\n",
+       " (3, 'Earth', 'blue', 1, 1.0, 0),\n",
+       " (4, 'Mars', 'red', 2, 0.11, 0),\n",
+       " (5, 'Jupiter', 'orange', 53, 317.9, 0),\n",
+       " (6, 'Saturn', 'hazel', 62, 95.19, 1),\n",
+       " (7, 'Uranus', 'light blue', 27, 14.54, 1),\n",
+       " (8, 'Neptune', 'dark blue', 14, 17.15, 1),\n",
+       " (9, 'Pluto', 'brown', 5, 0.003, 0)]"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c.execute('''SELECT * FROM planetss;''').fetchall()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "#Your code here; add data to the table"
+    "#Your code here; create a cursor object so you can execute statement against the database."
    ]
   },
   {
@@ -213,13 +301,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x7fb6f3ffe730>"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code to update the table"
+    "c.execute('''UPDATE planetss SET num_of_moons = 68 WHERE name = 'Jupiter';''')"
    ]
   },
   {
@@ -238,13 +335,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x7fb6f3ffe730>"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code to delete pluto here"
+    "# Your code to delete pluto here\n",
+    "c.execute('''DELETE FROM planetss WHERE name = 'Pluto';''')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(1, 'Mercury', 'gray', 0, 0.55, 0),\n",
+       " (2, 'Venus', 'yellow', 0, 0.82, 0),\n",
+       " (3, 'Earth', 'blue', 1, 1.0, 0),\n",
+       " (4, 'Mars', 'red', 2, 0.11, 0),\n",
+       " (5, 'Jupiter', 'orange', 68, 317.9, 0),\n",
+       " (6, 'Saturn', 'hazel', 62, 95.19, 1),\n",
+       " (7, 'Uranus', 'light blue', 27, 14.54, 1),\n",
+       " (8, 'Neptune', 'dark blue', 14, 17.15, 1)]"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c.execute('''SELECT * FROM planetss;''').fetchall()"
    ]
   },
   {
@@ -290,10 +424,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 33,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd"
@@ -301,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -392,20 +524,20 @@
        "4   5  Jupiter  orange            68  317.90      0"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#Demonstrating running a query and previewing results as pandas DataFrame\n",
-    "results = cur.execute(\"\"\"select * from planets;\"\"\").fetchall()\n",
+    "results = c.execute(\"\"\"select * from planetss;\"\"\").fetchall()\n",
     "\n",
     "#Alternatively we could do this in two steps:\n",
     "#cur.execute(\"\"\"select * from planets;\"\"\")\n",
     "#results = cur.fetchall()\n",
     "df = pd.DataFrame(results)\n",
-    "df. columns = [i[0] for i in cur.description]\n",
+    "df.columns = [i[0] for i in c.description]\n",
     "df.head()"
    ]
   },
@@ -418,13 +550,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 40,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "def sql_select_to_df(SQL_COMMAND, cur=cur):\n",
+    "def sql_select_to_df(SQL_COMMAND, cur=c):\n",
     "    results = cur.execute(SQL_COMMAND).fetchall()\n",
     "    df = pd.DataFrame(results)\n",
     "    df.columns = [i[0] for i in cur.description]\n",
@@ -433,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -524,13 +654,13 @@
        "4   5  Jupiter  orange            68  317.90      0"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = sql_select_to_df(\"\"\"select * from planets;\"\"\")\n",
+    "df = sql_select_to_df(\"\"\"select * from planetss;\"\"\")\n",
     "df.head()"
    ]
   },
@@ -550,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -635,13 +765,111 @@
        "7  Neptune   dark blue"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#Your code here"
+    "# with pandas\n",
+    "df.loc[:,['name','color']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>color</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Mercury</td>\n",
+       "      <td>gray</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Venus</td>\n",
+       "      <td>yellow</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Earth</td>\n",
+       "      <td>blue</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Mars</td>\n",
+       "      <td>red</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Jupiter</td>\n",
+       "      <td>orange</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Saturn</td>\n",
+       "      <td>hazel</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Uranus</td>\n",
+       "      <td>light blue</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Neptune</td>\n",
+       "      <td>dark blue</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      name       color\n",
+       "0  Mercury        gray\n",
+       "1    Venus      yellow\n",
+       "2    Earth        blue\n",
+       "3     Mars         red\n",
+       "4  Jupiter      orange\n",
+       "5   Saturn       hazel\n",
+       "6   Uranus  light blue\n",
+       "7  Neptune   dark blue"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# with sql\n",
+    "sql_select_to_df('''SELECT name,color FROM planetss;''')"
    ]
   },
   {
@@ -653,8 +881,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
+   "execution_count": 56,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -734,13 +964,106 @@
        "3   8  Neptune   dark blue            14   17.15      1"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#Your code here"
+    "sql_select_to_df('''SELECT * FROM planetss WHERE mass >1.00;''')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>name</th>\n",
+       "      <th>color</th>\n",
+       "      <th>num_of_moons</th>\n",
+       "      <th>mass</th>\n",
+       "      <th>rings</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Jupiter</td>\n",
+       "      <td>orange</td>\n",
+       "      <td>68</td>\n",
+       "      <td>317.90</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>6</td>\n",
+       "      <td>Saturn</td>\n",
+       "      <td>hazel</td>\n",
+       "      <td>62</td>\n",
+       "      <td>95.19</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>7</td>\n",
+       "      <td>Uranus</td>\n",
+       "      <td>light blue</td>\n",
+       "      <td>27</td>\n",
+       "      <td>14.54</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>8</td>\n",
+       "      <td>Neptune</td>\n",
+       "      <td>dark blue</td>\n",
+       "      <td>14</td>\n",
+       "      <td>17.15</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   id     name       color  num_of_moons    mass  rings\n",
+       "4   5  Jupiter      orange            68  317.90      0\n",
+       "5   6   Saturn       hazel            62   95.19      1\n",
+       "6   7   Uranus  light blue            27   14.54      1\n",
+       "7   8  Neptune   dark blue            14   17.15      1"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# with pandas\n",
+    "df.loc[df['mass']>1]"
    ]
   },
   {
@@ -752,7 +1075,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -813,13 +1136,13 @@
        "3     Mars  0.11"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#Your code here"
+    "sql_select_to_df('''SELECT name,mass FROM planetss WHERE mass <=1.00;''')"
    ]
   },
   {
@@ -831,7 +1154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -892,13 +1215,13 @@
        "3  Neptune   dark blue"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#Your code here"
+    "sql_select_to_df('''SELECT name,color FROM planetss WHERE num_of_moons >10;''')"
    ]
   },
   {
@@ -910,7 +1233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -945,15 +1268,6 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>3</td>\n",
-       "      <td>Earth</td>\n",
-       "      <td>blue</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1.00</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
        "      <td>4</td>\n",
        "      <td>Mars</td>\n",
        "      <td>red</td>\n",
@@ -966,18 +1280,17 @@
        "</div>"
       ],
       "text/plain": [
-       "   id   name color  num_of_moons  mass  rings\n",
-       "0   3  Earth  blue             1  1.00      0\n",
-       "1   4   Mars   red             2  0.11      0"
+       "   id  name color  num_of_moons  mass  rings\n",
+       "0   4  Mars   red             2  0.11      0"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#Your code here"
+    "sql_select_to_df('''SELECT * FROM planetss WHERE num_of_moons >=1.00 AND mass < 1.00 ;''')"
    ]
   },
   {
@@ -1050,7 +1363,14 @@
     }
    ],
    "source": [
-    "#Your code here"
+    "sql_select_to_df(\"\"\"SELECT name, \n",
+    "                           color \n",
+    "                           FROM planets \n",
+    "                           WHERE color == 'blue'\n",
+    "                           OR color == 'light blue'\n",
+    "                           OR color == 'dark blue';\n",
+    "                 \"\"\"\n",
+    "                )"
    ]
   },
   {
@@ -1084,7 +1404,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
